--- a/testonly.html
+++ b/testonly.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html dir="rtl">
 <head>
 	<title>نموذج "البركة" المطور لمقياس هولاند لتحديد الميول والقدرات المهنية</title>
 	<link rel="stylesheet" href="pure-min.css">
@@ -10,12 +10,12 @@
 </head>
 <body>
 	<div class="pure-g">
-	    <div class="pure-u-3-24"></div>
+	    <div class="pure-u-3-24 "></div>
 	    <div class="pure-u-18-24">
 	    	<h4>ضع علامة على جميع العناصر التي تعجبك - اترك الباقي بدون تحديد.</h4><br>
 	    	<form id="mainForm">
-	    		<div class="pure-g">
-	    			<div class="pure-u-8-24">  <!-- first column -->
+	    		<div class="pure-g ">
+	    			<div class="pure-u">  <!-- first column -->
 			    		<label><input class="i" type="checkbox">&nbsp;أستغرق في التفكير الطويل عندما أفكر في لغز أو تفسير ظاهرة ما</label><br><br>
 			    		<label><input class="r" type="checkbox">&nbsp;أحب أن أقوم بإصلاح وترتيب أدواتي بنفسي</label><br><br>
 			    		<label><input class="a" type="checkbox">&nbsp;أحب تجربة الأفكار الجديدة والغريبة</label><br><br>
@@ -27,8 +27,6 @@
 			    		<label><input class="i" type="checkbox">&nbsp;أثناء الدراسة كنت أحب المواد العلمية (كالرياضيات والفيزياء)</label><br><br>
 			    		<label><input class="s" type="checkbox">&nbsp;أحب الأعمال التي تجعل الآخرين يشعرون بالسعادة ولَو كانت صعبة</label><br><br>
 			    		<label><input class="r" type="checkbox">&nbsp;أتميز في بعض الألعاب الرياضية</label><br><br>
-	    			</div> 
-	    			<div class="pure-u-8-24"> <!-- second column -->
 			    		<label><input class="c" type="checkbox">&nbsp;لا أجد صعوبة أو مللا في ممارسة العمل المتكرر</label><br><br>	    				
 			    		<label><input class="e" type="checkbox">&nbsp;أستمتع بتنظيم أمور الآخرين وتوجيههم للعمل</label><br><br>
 			    		<label><input class="a" type="checkbox">&nbsp;أُفضّل إنجاز نفس العمل بطريقة جديدة في كل مرة على أن أّتّبع طريقة منظمة وواحدة</label><br><br>
@@ -42,8 +40,6 @@
 			    		<label><input class="s" type="checkbox">&nbsp;أستمتع كثيرا بتعليم أو مساعدة الآخرين</label><br><br>
 			    		<label><input class="i" type="checkbox">&nbsp;أحب القراءة، الدراسة والتفكير في حل المسائل</label><br><br>
 			    		<label><input class="a" type="checkbox">&nbsp;لدي مهارات ومواهب فنية (رسم - شعر - تصميم ... الخ)</label><br><br>
-	    			</div>
-	    			<div class="pure-u-8-24"> <!-- third column -->	
 			    		<label><input class="e" type="checkbox">&nbsp;أحب أن أكون الشخص الأساسي "القائد" في المجموعة دائماً</label><br><br>    				
 			    		<label><input class="a" type="checkbox">&nbsp;أتميز بمهارة الإبداع والابتكار (أفكار غير تقليدية)</label><br><br>
 			    		<label><input class="r" type="checkbox">&nbsp;أستمتع بالعمل خارج الغرف والمكاتب (في الهواء الطلق)</label><br><br>
