--- a/testonly.html
+++ b/testonly.html
@@ -12,7 +12,7 @@
 	<div class="pure-g">
 	    <div class="pure-u-3-24 "></div>
 	    <div class="pure-u-18-24">
-	    	<h4>ضع علامة على جميع العناصر التي تعجبك - اترك الباقي بدون تحديد.</h4><br>
+	    	<h4>اختر العبارة التي تمثلك</h4><br>
 	    	<form id="mainForm">
 	    		<div class="pure-g ">
 	    			<div class="pure-u">  <!-- first column -->
