add font and styles

--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!doctype html>
-<html>
+<html >
 <head>
-	<title>Interest Profile Test</title>
+	<title>نموذج إختبار البركة</title>
 	<link rel="stylesheet" href="pure-min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta name="keywords" content="Interest Profile Holland Code Career Occupational Interest ">
 	    <meta name="description" content="Know your Interest Profile with the Holland Code, by just taking a short 1-minute test.">
 	    <meta name="author" content="dev">
 	<meta charset="utf-8">
+
 	<link rel="stylesheet" href="main.css">
+
 	<script src="main.js"></script>
 </head>
-<body dir="rtl">
+<body style="text-align: center;" dir="rtl">
+
 	<div class="pure-g">
-		<div class="pure-u-3-24"></div>
-		<div class="pure-u-18-24">
+		<img src="barakah.png" alt="" style="width: 119px;">
+		<div class="pure-u-1">
+			
+
 			<h1>نموذج "البركة" المطور لمقياس هولاند لتحديد الميول والقدرات المهنية</span></h1>
 		</div>
 	</div>
 
-	<div id="about" class="pure-g">
-		<div class="pure-u-3-24"></div>
-		<div class="pure-u-18-24">
+	<div id="about" class="pure-g-1" style="margin:20px">
+		<div >
 		<p>			
 			هذه الاستمارة هي نموذج لمقياس مهني أكاديمي تم تطويره في جمعية البركة للتنمية الاجتماعية اعتماداً على نظرية جون هولاند للأنماط المهنية المعتمد عالمياً بما يناسب واقع المجتمع وسوق العمل في بلادنا العربية وباللغة المناسبة، وبطريقة جديدة مبتكرة تبسط طريقة حساب نتيجة المقياس.
 لتعرف النمط المهني الأنسب لشخصيتك بدقة عليك الإجابة على الأسئلة الآتية حسب الواقع العملي لا حسب ما تظن أنه الصواب أو المثالي، والمطلوب منك الإجابة بسرعة وبتلقائية دون تردد علماً أنه ليست هناك إجابات صحيحة أو خاطئة.. شكراً
@@ -38,6 +42,6 @@
 	    </div>
 	</div>
 
-	
+	<script src="jquery-3.6.0.min.js"></script>
 </body>
 </html>
