--- a/testonly.html
+++ b/testonly.html
@@ -5,13 +5,20 @@
 	<link rel="stylesheet" href="pure-min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
+
 	<link rel="stylesheet" href="main.css">
+
 	<script src="main.js"></script>
 </head>
 <body>
+
+
 	<div class="pure-g">
-	    <div class="pure-u-3-24 "></div>
+	    <div class="pure-u-3-24 ">
+			<img src="barakah.png" alt="" style="width: 65px;">
+		</div>
 	    <div class="pure-u-18-24">
+			
 	    	<h4>اختر العبارة التي تمثلك</h4><br>
 	    	<form id="mainForm">
 	    		<div class="pure-g ">
@@ -54,9 +61,15 @@
 			    		<label><input class="e" type="checkbox">&nbsp;أحب الأعمال والأنشطة التي فيها مغامرة وتحديات صعبة</label><br><br>
 	    			</div>		    		
 	    		</div>
-	    		<button class="pure-button pure-button-primary" onclick="return check()">إرسال</button>&nbsp;&nbsp;<button class="pure-button" onclick="resetForm();">إعادة الإختبار</button>
+			<!-- Testing Area -->
+
+
+
+			<!-- Testing Area -->
+	    		<button class="pure-button pure-button-primary" onclick="return check()">إرسال</button>&nbsp;&nbsp;<button class="pure-button pure-button" onclick="resetForm();">إعادة الإختبار</button>
 	    	</form><br>
 	</div>
+
 
 </body>
 </html>
