--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>نموذج إختبار البركة</title>
 	<link rel="stylesheet" href="pure-min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	    <meta name="keywords" content="Interest Profile Holland Code Career Occupational Interest ">
-	    <meta name="description" content="Know your Interest Profile with the Holland Code, by just taking a short 1-minute test.">
+	    <meta name="keywords" content="نموذج إختبار البركة">
+	    <meta name="description" content="نموذج إختبار البركة">
 	    <meta name="author" content="dev">
 	<meta charset="utf-8">
 
